<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_login"
        android:icon="@drawable/ic_default_user"
        android:title="@string/title_login" />
    <item
        android:id="@+id/menu_welcome"
        android:icon="@drawable/ic_welcome"
        android:title="@string/title_welcome" />
    <item
        android:id="@+id/menu_instructions"
        android:icon="@drawable/ic_instructions"
        android:title="@string/title_instructions" />
    <item
        android:id="@+id/menu_shoelist"
        android:icon="@drawable/ic_shoe_list"
        android:title="@string/title_shoes_list" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/title_logout" />
</menu>