<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- ConstraintLayout here to help organize items in the screen.
     Had to make another layout for horizontal orientation -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        tools:context=".screens.LoginFragment">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/ic_shoestore"
            app:layout_constraintBottom_toTopOf="@id/svFormLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/svFormLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginLogo">

            <LinearLayout
                android:id="@+id/llFormLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_form"
                android:elevation="10dp"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginLogo">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:gravity="center"
                    android:text="@string/authentication"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="@string/authentication" />

                <EditText
                    android:id="@+id/loginUsername"
                    style="@style/customLoginInput"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints="emailAddress"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/user_email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/loginPwd"
                    style="@style/customLoginInput"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints="password"
                    android:drawableStart="@drawable/ic_pwd"
                    android:hint="@string/user_pwd"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_button"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/llFormLogin" />

                <Button
                    android:id="@+id/registerButton"
                    style="@style/customLoginInput"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:importantForAutofill="no"
                    android:text="@string/register_now"
                    android:textAlignment="center"
                    android:textAllCaps="true" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>