<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="newShoe"
            type="pt.hventura.shoestore.models.Shoe" />
    </data>

    <!-- Used ConstraintLayout to make all items fit all screen sizes and stay with the margins i gave them -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryDarkColor"
        android:padding="10dp">

        <!-- CardView here is to help give that elevation effect to each item :) -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- To adjust the items in an horizontal orientation first! -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/secondaryDarkColor"
                android:orientation="horizontal"
                android:padding="6dp">

                <TextView
                    android:id="@+id/shoeNumber"
                    style="@style/customTitle"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.05"
                    android:gravity="center"
                    android:textSize="12sp"
                    tools:text="1" />

                <View
                    android:id="@+id/quantitySeparator"
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/primaryColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <!-- And these items in a vertical orientation -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- And than each element has a horizontal layout to make them all spread equally
                    using the layout_weight attribute-->
                    <!-- COMPANY -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/customText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/shoe_company" />

                        <TextView
                            style="@style/customText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@{newShoe.company}"
                            tools:text="Test Company" />

                    </LinearLayout>

                    <!-- NAME -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/customText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/shoe_name" />

                        <TextView
                            style="@style/customText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@{newShoe.name}"
                            tools:text="Test name" />

                    </LinearLayout>

                    <!-- SIZE -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/customText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/shoe_size" />

                        <TextView
                            style="@style/customText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@{newShoe.size}"
                            tools:text="41.5" />

                    </LinearLayout>

                    <!-- DESCRIPTION -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/customText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/shoe_description" />

                        <TextView
                            style="@style/customLongText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@{newShoe.description}"
                            tools:text="Test Shoe Description with a fair long test withou using Lorem ipsum" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>